# iced-examples-mcp

./: Cargo.toml  README.md
data/iced/: example_iced_13_0.rs  example_iced_widget_table.rs
data/iced_aw/: example_iced_aw_badge.rs  example_iced_aw_card.rs  example_iced_aw_color_picker.rs  example_iced_aw_context_menu.rs  example_iced_aw_date_picker.rs  example_iced_aw_drop_down.rs  example_iced_aw_labeled_frame.rs  example_iced_aw_menu.rs  example_iced_aw_number_input.rs  example_iced_aw_selection_list.rs  example_iced_aw_slide_bar.rs  example_iced_aw_spinner.rs  example_iced_aw_tab_bar.rs  example_iced_aw_time_picker.rs  example_iced_aw_typed_input.rs  example_iced_aw_wrap.rs
data/iced_table/: example_iced_table_table.rs
src/: main.rs
