[package]
name = "rust-iced-examples-mcp"
authors = ["Debamitro Chakraborti <debamitro@gmail.com>"]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/debamitro/iced-examples-mcp"

[dependencies]
techne-mcp = "0.1.0-dev.2"
techne-server = { version = "0.1.0-dev.2", features = ["http"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = "0.3"
